.work/must-gather-analysis/registry-build11-ci-openshift-org-ci-ln-vjb5l1t-stable-sha256-f89169f1cf6fd47be50038cc1c80be38e4fb997d7805094b3f6e50034f9c4c20/namespaces/openshift-catalogd/networking.k8s.io/networkpolicies/catalogd-controller-manager.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: "2026-01-28T09:31:11Z"
  generation: 1
  managedFields:
  - apiVersion: networking.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:spec:
        f:egress: {}
        f:ingress: {}
        f:podSelector: {}
        f:policyTypes: {}
    manager: cluster-olm-operator
    operation: Update
    time: "2026-01-28T09:31:11Z"
  name: catalogd-controller-manager
  namespace: openshift-catalogd
  resourceVersion: "8415"
  uid: 11e9a6f8-dc96-4dda-beb4-dbf97888d485
spec:
  egress:
  - {}
  ingress:
  - ports:
    - port: 7443
      protocol: TCP
    - port: 8443
      protocol: TCP
    - port: 9443
      protocol: TCP
  podSelector:
    matchLabels:
      control-plane: catalogd-controller-manager
  policyTypes:
  - Ingress
  - Egress
