.work/must-gather-analysis/registry-build11-ci-openshift-org-ci-ln-vjb5l1t-stable-sha256-f89169f1cf6fd47be50038cc1c80be38e4fb997d7805094b3f6e50034f9c4c20/namespaces/openshift-catalogd/networking.k8s.io/networkpolicies/catalogd-default-deny-all-traffic.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: "2026-01-28T09:31:11Z"
  generation: 1
  managedFields:
  - apiVersion: networking.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:spec:
        f:policyTypes: {}
    manager: cluster-olm-operator
    operation: Update
    time: "2026-01-28T09:31:11Z"
  name: catalogd-default-deny-all-traffic
  namespace: openshift-catalogd
  resourceVersion: "8417"
  uid: 6db904e6-9e61-4d6e-acb4-2432a3d28a73
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
